unpackaged/main/default/objects/Object_Create__c/Object_Create__c.object-meta.xml
<CustomObject>
    <description>Object is used to Auto Create Opportunities (Activate a Flow)</description>
    <label>Object Create</label>
    <nameField>
        <displayFormat>AOC - {0000000000}</displayFormat>
        <label>Object Create Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objects Create</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>