unpackaged/main/default/objects/Object_Create__c/fields/Brand_Experience__c.field-meta.xml
<CustomField>
    <fullName>Brand_Experience__c</fullName>
    <description>Introduced as part of the Quick Bridge to National Funding migration project to capture which brand experience the opportunity relates to. This field should should be passed into the Auto Create Object Records flow to set the Brand Experience field on Opportunity when its created</description>
    <label>Brand Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Originating_Brand</valueSetName>
    </valueSet>
</CustomField>