unpackaged/main/default/objects/Object_Create__c/fields/Object_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Reference_Id__c</fullName>
    <label>Object Reference Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>